--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -21,6 +21,8 @@ jobs:
 
       - run: pnpm install
       - run: pnpm build
+      - run: cd ./build
+      - run: echo github.dscode.top > CNAME
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
