--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "docusaurus start",
     "dev": "docusaurus start",
     "build": "docusaurus build",
+    "build:dev" :"docusaurus build --dev",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -22,20 +23,20 @@
   },
   "dependencies": {
     "@docsearch/react": "^3.5.2",
-    "@docusaurus/core": "^2.4.3",
-    "@docusaurus/module-type-aliases": "^2.4.3",
-    "@docusaurus/plugin-client-redirects": "^2.4.3",
-    "@docusaurus/preset-classic": "^2.4.3",
-    "@docusaurus/remark-plugin-npm2yarn": "^2.4.3",
-    "@docusaurus/theme-classic": "^2.4.3",
-    "@docusaurus/theme-common": "^2.4.3",
-    "@docusaurus/theme-live-codeblock": "^2.4.3",
-    "@docusaurus/theme-search-algolia": "^2.4.3",
-    "@fluentui/react-icons": "^2.0.221",
+    "@docusaurus/core": "^3.0.0",
+    "@docusaurus/module-type-aliases": "^3.0.0",
+    "@docusaurus/plugin-client-redirects": "^3.0.0",
+    "@docusaurus/preset-classic": "^3.0.0",
+    "@docusaurus/remark-plugin-npm2yarn": "^3.0.0",
+    "@docusaurus/theme-classic": "^3.0.0",
+    "@docusaurus/theme-common": "^3.0.0",
+    "@docusaurus/theme-live-codeblock": "^3.0.0",
+    "@docusaurus/theme-search-algolia": "^3.0.0",
+    "@fluentui/react-icons": "^2.0.222",
     "@headlessui/react": "^1.7.17",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/react": "^3.0.0",
     "@radix-ui/react-select": "^2.0.0",
-    "@stoplight/elements": "^7.13.7",
+    "@stoplight/elements": "^7.13.9",
     "clsx": "^2.0.0",
     "param-case": "^3.0.4",
     "patch-package": "^8.0.0",
@@ -47,17 +48,17 @@
     "react-live": "^4.1.5"
   },
   "devDependencies": {
-    "@docusaurus/types": "^2.4.3",
+    "@docusaurus/types": "^3.0.0",
     "@styled-icons/boxicons-logos": "^10.47.0",
-    "@swc/core": "^1.3.94",
+    "@swc/core": "^1.3.96",
     "@tsconfig/docusaurus": "^2.0.2",
-    "@types/react": "^18.2.31",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
+    "@types/react": "^18.2.37",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "autoprefixer": "^10.4.16",
     "buffer": "^6.0.3",
-    "docusaurus-plugin-typedoc": "^0.20.2",
-    "eslint": "^8.52.0",
+    "docusaurus-plugin-typedoc": "^0.21.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "js-yaml": "^4.1.0",
@@ -65,14 +66,14 @@
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.6",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "process": "^0.11.10",
     "react-markdown": "^9.0.0",
     "stream-browserify": "^3.0.0",
     "swc-loader": "^0.2.3",
-    "tailwindcss": "^3.3.3",
-    "typedoc": "^0.25.2",
-    "typedoc-plugin-markdown": "^3.16.0",
+    "tailwindcss": "^3.3.5",
+    "typedoc": "^0.25.3",
+    "typedoc-plugin-markdown": "^3.17.1",
     "typescript": "^5.2.2",
     "url": "^0.11.3"
   },
