--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "docusaurus start",
     "dev": "docusaurus start",
     "build": "docusaurus build",
-    "build:dev" :"docusaurus build --dev",
+    "build:dev": "docusaurus build --dev",
+    "postbuild": "pagefind --site build --output-path build/static/pagefind",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -62,6 +63,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "js-yaml": "^4.1.0",
+    "pagefind": "^1.0.4",
     "pascal-case": "^3.1.2",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.32",
