--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ds-blog",
   "version": "1.0.0",
   "private": true,
+  "main": "electron-main.js",
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
@@ -20,7 +21,9 @@
     "format": "prettier -w src docs",
     "format:docs": "prettier -w docs",
     "typecheck": "tsc",
-    "spell-check": "npx cspell docs/**/*.mdx"
+    "spell-check": "npx cspell docs/**/*.mdx",
+    "electron:dev": "electron .",
+    "electron:build": "electron-forge make"
   },
   "dependencies": {
     "@docsearch/react": "^3.5.2",
@@ -37,11 +40,11 @@
     "@headlessui/react": "^1.7.17",
     "@mdx-js/react": "^3.0.0",
     "@radix-ui/react-select": "^2.0.0",
-    "@stoplight/elements": "^7.16.1",
+    "@stoplight/elements": "^7.16.2",
     "clsx": "^2.0.0",
     "param-case": "^3.0.4",
     "patch-package": "^8.0.0",
-    "prism-react-renderer": "^2.3.0",
+    "prism-react-renderer": "^2.3.1",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,30 +53,34 @@
   },
   "devDependencies": {
     "@docusaurus/types": "^3.0.1",
+    "@electron-forge/cli": "^7.2.0",
     "@styled-icons/boxicons-logos": "^10.47.0",
     "@swc/core": "^1.3.101",
     "@tsconfig/docusaurus": "^2.0.2",
-    "@types/react": "^18.2.45",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@types/react": "^18.2.46",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
     "autoprefixer": "^10.4.16",
     "buffer": "^6.0.3",
-    "docusaurus-plugin-typedoc": "^0.21.0",
+    "docusaurus-plugin-typedoc": "^0.22.0",
+    "dotenv": "^16.3.1",
+    "electron": "^28.1.0",
+    "electron-vite": "^1.0.29",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-prettier": "^5.1.2",
     "js-yaml": "^4.1.0",
     "pagefind": "^1.0.4",
     "pascal-case": "^3.1.2",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.9",
+    "prettier-plugin-tailwindcss": "^0.5.10",
     "process": "^0.11.10",
     "react-markdown": "^9.0.1",
     "stream-browserify": "^3.0.0",
     "swc-loader": "^0.2.3",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^3.4.0",
     "typedoc": "^0.25.4",
     "typedoc-plugin-markdown": "^3.17.1",
     "typescript": "^5.3.3",
